--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,34 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+a {
+  color: #ffff;
+  text-decoration: none;
+}
+.header-container{
+  display: flex;
+  width: 100%;
+  padding: 20px 40px;
+}
+.header-container .menu {
+  display: flex;
+  justify-content: center;
+  flex: 1;
+}
+.menu .menu-links a{
+  margin: 12px;
+  color: #ffff;
+  text-decoration: none;
+}
+button {
+  border-radius: 10px;
+  padding: 10px 20px;
+  border: none;
+  text-transform: uppercase;
+}
+button.primary
+{
+  color: #000000;
+ font-weight: 800;
+ background: #f3d36a;
+}
